# fonepay-rs

./: Cargo.toml  LICENSE.txt  README.md
src/: hmac_utils.rs  lib.rs  qr_request.rs  status.rs  websocket.rs
